syntax = "proto3";

package server_administration_service;

option go_package = "./pb";

service ServerAdministrationService {
    rpc GetAllAddresses (EmptyRequest) returns (AddressesResponse);
}

message EmptyRequest {}

message AddressesResponse {
    repeated AddressInfo addresses = 1;
}

message AddressInfo {
    int64 id = 1;
    string address = 2;
}